deploy/openshift/celerybeat.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celerybeat-deployment
  labels:
    app: celerybeat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: celerybeat
  template:
    metadata:
      labels:
        app: celerybeat
    spec:
      containers:
      - name: celerybeat
        image: "defectdojo/defectdojo-django:latest"
        cmd: 
          - '/wait-for-it.sh'
        args:
          - 'mysql.defectdojo.svc:3306'
          - '-t 30'
          - '--'
          - '/entrypoint-celery-beat.sh'
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
