deploy/openshift/defectdojo.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: defectdojo-deployment
  labels:
    app: defectdojo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: defectdojo
  template:
    metadata:
      labels:
        app: defectdojo
    spec:
      volumes:
        - name: defectdojo-media
          emptyDir: {}
      containers:
      - name: uwsgi
        image: "quay.io/hyperkineticnerd/defectdojo-django:latest"
        cmd: ['/wait-for-it.sh', 'mysql.defectdojo.svc:3306', '-t', '30', '--', '/entrypoint-uwsgi.sh']
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "1"
        volumeMounts:
          - name: defectdojo-media
            mountPath: /app/media
