deploy/openshift/deployment.celerybeat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat-deployment
  labels:
    app: defectdojo
    defectdojo.org/component: celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: defectdojo
      defectdojo.org/component: celery-beat
  template:
    metadata:
      labels:
        app: defectdojo
        defectdojo.org/component: celery-beat
    spec:
      containers:
      - name: celery-beat
        image: "quay.io/hyperkineticnerd/defectdojo-django:latest"
        command: ['/entrypoint-celery-beat.sh']
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
