deploy/openshift/deployment.defectdojo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: defectdojo-deployment
  labels:
    app: defectdojo
    defectdojo.org/component: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: defectdojo
      defectdojo.org/component: django
  template:
    metadata:
      labels:
        app: defectdojo
        defectdojo.org/component: django
    spec:
      volumes:
        - name: defectdojo-media
          emptyDir: {}
      containers:
      - name: uwsgi
        image: "quay.io/hyperkineticnerd/defectdojo-django:latest"
        # command: ['/wait-for-it.sh', 'mysql.defectdojo.svc:3306', '-t', '30', '--', '/entrypoint-uwsgi.sh']
        ports:
        - name: http
          containerPort: 8081
        - name: uwsgi
          containerPort: 3031
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "1"
        volumeMounts:
          - name: defectdojo-media
            mountPath: /app/media
