deploy/openshift/deployment.nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: defectdojo
    defectdojo.org/component: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: defectdojo
      defectdojo.org/component: nginx
  template:
    metadata:
      labels:
        app: defectdojo
        defectdojo.org/component: nginx
    spec:
      volumes:
        - name: defectdojo-media
          emptyDir: {}
      containers:
      - name: nginx
        image: "quay.io/hyperkineticnerd/defectdojo-nginx:latest"
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        volumeMounts:
          - name: defectdojo-media
            mountPath: /usr/share/nginx/html/media
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "1"
