deploy/openshift/initialize.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: initialize-deployment
  labels:
    app: initialize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: initialize
  template:
    metadata:
      labels:
        app: initialize
    spec:
      volumes:
        - name: defectdojo-media
          emptyDir: {}
      containers:
      - name: defectdojo-init
        image: "quay.io/hyperkineticnerd/defectdojo-django:latest"
        cmd: ['/wait-for-it.sh', 'mysql.defectdojo.svc:3306', '--', '/entrypoint-initializer.sh']
        # cmd: ['/entrypoint-initializer.sh']
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "1"
