deploy/openshift/nginx.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: "defectdojo/defectdojo-nginx:latest"
        # command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
        ports:
        - containerPort: 8080
        - containerPort: 8443
        volumeMounts:
          - name: defectdojo-media
            mountPath: /usr/share/nginx/html/media
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "1"
      volumes:
        - name: defectdojo-media
          emptyDir: {}
