deploy/openshift/celeryworker.service.yml
apiVersion: v1
kind: Service
metadata:
  name: celery-worker
  labels:
    app: defectdojo
    defectdojo.org/component: celery-worker
spec:
  ports:
  - port: 3031
    name: uwsgi
  clusterIP: None
  selector:
    defectdojo.org/component: celery-worker
