deploy/openshift/defectdojo.service.yml
apiVersion: v1
kind: Service
metadata:
  name: defectdojo
  labels:
    app: defectdojo
    defectdojo.org/component: django
spec:
  ports:
  - name: http
    port: 8080
  - name: uwsgi
    port: 3031
  clusterIP: None
  selector:
    app: defectdojo
    defectdojo.org/component: django
