deploy/openshift/mysql.service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: defectdojo
    app-component: mysql
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
    app-component: mysql
