deploy/openshift/nginx.service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 8080
    name: http
  - port: 8443
    name: https
  clusterIP: None
  selector:
    app: nginx
