deploy/openshift/rabbitmq.service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: rabbitmq
